--- a/ClientConvertisseurV2/Views/ConvertisseurEuroPage.xaml
+++ b/ClientConvertisseurV2/Views/ConvertisseurEuroPage.xaml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <Page
-    x:Class="ClientConvertisseurV1.Views.ConvertisseurEuroPage"
+    x:Class="ClientConvertisseurV2.Views.ConvertisseurEuroPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:ClientConvertisseurV1.Views"
+    xmlns:local="using:ClientConvertisseurV2.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
@@ -29,7 +30,8 @@
             x:Name="MontantTextBox"
             Width="200"
             Margin="0,0,0,10"
-            RelativePanel.Below="MontantLabel" />
+            RelativePanel.Below="MontantLabel"
+            Text="{Binding Montant, Mode=TwoWay}" />
 
         <!--  Devise  -->
         <TextBlock
@@ -45,7 +47,8 @@
             Margin="0,0,0,10"
             DisplayMemberPath="NomDevise"
             ItemsSource="{Binding Devises}"
-            RelativePanel.Below="DeviseLabel" />
+            RelativePanel.Below="DeviseLabel"
+            SelectedItem="{Binding DeviseSelectionee, Mode=TwoWay}" />
 
         <!--  Résultat  -->
         <TextBox
@@ -61,7 +64,7 @@
         <Button
             x:Name="ConvertirButton"
             Padding="20,5"
-            Click="ConvertirButton_Click"
+            Command="{Binding BtnSetConversion}"
             Content="Convertir"
             RelativePanel.AlignHorizontalCenterWithPanel="True"
             RelativePanel.Below="ResultatTextBox" />
